--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,8 @@ ios/build/XCBuildData
 ios/build
 ios/Runner/ArabBank
 lookout_sdk_flutter/
+
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
